hdf5 not installed warning still there

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -40,7 +40,8 @@ requirements:
     - six
     - python-Levenshtein
     - pyyaml
-    - h5py  # optional
+    - h5py
+    - hdf5
 
 test:
   imports:
