h5py startup warning fixed

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -23,6 +23,8 @@ requirements:
     - git
     - pip
     - pytest-runner
+    - h5py
+    - hdf5
   run:
     - python  {{ data.get('python_requires').replace('>=', '').replace('==', '') }}
     - matplotlib
