--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/anaconda:1-3
+# from mcr.microsoft.com/devcontainers/miniconda:1-3
 
 COPY .devcontainer/environment.yml /tmp/conda-tmp/
 RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
