--- a/binder/DockerFile
+++ b/binder/DockerFile
@@ -5,13 +5,13 @@ FROM continuumio/miniconda3
 
 # 2. Copy in your conda-recipe and source so we can build the package
 #    Binder’s build context is the repo root, so these paths match your repo layout.
-COPY conda-recipe        /tmp/conda-recipe
-COPY setup.py            /tmp/setup.py
-COPY netmd               /tmp/netmd
-COPY conf                /tmp/conf
-COPY example             /tmp/example
-COPY docs                /tmp/docs
-COPY README.md           /tmp/README.md
+COPY ../conda-recipe        /tmp/conda-recipe
+COPY ../setup.py            /tmp/setup.py
+COPY ../netmd               /tmp/netmd
+COPY ../conf                /tmp/conf
+COPY ../example             /tmp/example
+COPY ../docs                /tmp/docs
+COPY ../README.md           /tmp/README.md
 
 # 3. Install conda-build and JupyterLab (so Binder will detect & launch a notebook)
 #    Clean up caches to keep the image lean.
